WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72733
Web Inspector: [protocol] actual JSON messages do not conform to Inspector.json in CSS
https://bugs.webkit.org/show_bug.cgi?id=72733
Summary
Web Inspector: [protocol] actual JSON messages do not conform to Inspector.js...
Peter Rybin
Reported
2011-11-18 08:48:38 PST
InspectorStyleSheet.cpp:141 'sourceLine' is declared 'string' but actual value is 'integer' InspectorStyleSheet.cpp:246 'styleId' property must be set unconditionally, it is not optional. InspectorStyleSheet.cpp:248-249 'witdh' and 'height' property are declared 'integer', but actual values are 'string' InspectorStyleSheet.cpp:448 warning: 'text' property is undeclared InspectorStyleSheet.cpp:499 'shorthandName' must be set unconditionally, it is not optional InspectorStyleSheet.cpp:795 'ruleId' must be set unconditionally, it is not optional (all line numbers are as in
r100177
) This should be fixed to conform to protocol declaration AND to prepare switching to type-safe JSON API.
Attachments
Patch
(6.69 KB, patch)
2011-11-21 04:34 PST
,
Alexander Pavlov (apavlov)
no flags
Details
Formatted Diff
Diff
Patch
(15.79 KB, patch)
2011-11-21 08:33 PST
,
Alexander Pavlov (apavlov)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2011-11-21 04:34:57 PST
Created
attachment 116068
[details]
Patch
Pavel Feldman
Comment 2
2011-11-21 07:09:26 PST
Comment on
attachment 116068
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=116068&action=review
> Source/WebCore/inspector/Inspector.json:1520 > + { "name": "styleId", "$ref": "CSSStyleId", "optional": true, "description": "The CSS style identifier (absent for computed styles and attribute styles)." },
You should use different structure for computed and matched styles.
Alexander Pavlov (apavlov)
Comment 3
2011-11-21 08:33:11 PST
Created
attachment 116094
[details]
Patch
WebKit Review Bot
Comment 4
2011-11-21 08:34:33 PST
Attachment 116094
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/insp..." exit_code: 1 Source/WebCore/inspector/InspectorCSSAgent.cpp:317: The parameter type should use PassRefPtr instead of RefPtr. [readability/pass_ptr] [5] Source/WebCore/inspector/InspectorCSSAgent.h:67: The parameter type should use PassRefPtr instead of RefPtr. [readability/pass_ptr] [5] Total errors found: 2 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 5
2011-11-22 03:15:11 PST
Comment on
attachment 116094
[details]
Patch Clearing flags on attachment: 116094 Committed
r100987
: <
http://trac.webkit.org/changeset/100987
>
WebKit Review Bot
Comment 6
2011-11-22 03:15:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug