Web Inspector: [protocol] actual JSON messages do not conform to Inspector.json in CSS https://bugs.webkit.org/show_bug.cgi?id=72733

Reviewed by Pavel Feldman.

Source/WebCore:

* inspector/Inspector.json:
* inspector/InspectorCSSAgent.cpp:
(WebCore::InspectorCSSAgent::getComputedStyleForNode):
* inspector/InspectorCSSAgent.h:
* inspector/InspectorStyleSheet.cpp:
(WebCore::InspectorStyle::buildArrayForComputedStyle):
* inspector/InspectorStyleSheet.h:
* inspector/front-end/CSSStyleModel.js:
(WebInspector.CSSStyleModel.prototype.getComputedStyleAsync):
(WebInspector.CSSStyleDeclaration.parseComputedStylePayload):

LayoutTests:

* inspector/styles/styles-new-API.html:


Canonical link: https://commits.webkit.org/89474@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100987 268f45cc-cd09-0410-ab3c-d52691b4dbfc